--- a/templates/form.html
+++ b/templates/form.html
@@ -7,6 +7,6 @@
     <title>HTML 5 Boilerplate</title>
   </head>
   <body>
-    <p>Hello World!</p>
+    <p>Hello {{ name }}</p>
   </body>
 </html>
