--- a/templates/form.html
+++ b/templates/form.html
@@ -7,6 +7,9 @@
     <title>HTML 5 Boilerplate</title>
   </head>
   <body>
-    <p>Hello {{ name }}</p>
+    <form>
+      <input type="text" name="name" id="name" />
+      <input type="select" name="compter" id="email" />
+    </form>
   </body>
 </html>
